
project('JavaScriptCore', 'cpp', version : 'local')

# JavaScriptCore.vcxproj

includes_list = [
  '../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore',
  '../../../../EAWebKitSupportPackages/JavaScriptCore/local',
  '../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/assembler',
  '../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/bytecode',
  '../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/bytecompiler',
  '../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/heap',
  '../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/dfg',
  '../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/debugger',
  '../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/interpreter',
  '../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/jit',
  '../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/parser',
  '../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/profiler',
  '../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime',
  '../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/wtf',
  '../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/wtf/gobject',
  '../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/wtf/unicode',
  '../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/yarr',
  '../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/API',
  '../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/ForwardingHeaders',
  '../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/generated',
  #'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/os-win32',
  '../../../../EAWebKitSupportPackages/EABaseEAWebKit/local/include/Common',
  '../../../../EAWebKitSupportPackages/coreallocatorEAWebKit/local-1.03.08/include',
  '../../../../EAWebKitSupportPackages/EASTLEAWebKit/local/include',
]

includes = include_directories(includes_list)

headers = [
]

sources =[
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/API/JSBase.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/API/JSCallbackConstructor.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/API/JSCallbackFunction.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/API/JSCallbackObject.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/API/JSClassRef.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/API/JSContextRef.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/API/JSObjectRef.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/API/JSSettingsEA.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/API/JSStringRef.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/API/JSTextInterface.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/API/JSValueRef.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/API/OpaqueJSString.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/assembler/ARMAssembler.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/assembler/ARMv7Assembler.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/assembler/MacroAssemblerARM.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/assembler/MacroAssemblerSH4.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/bytecode/CodeBlock.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/bytecode/JumpTable.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/bytecode/Opcode.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/bytecode/PredictedType.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/bytecode/SamplingTool.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/bytecode/StructureStubInfo.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/bytecode/ValueProfile.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/bytecompiler/BytecodeGenerator.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/bytecompiler/NodesCodegen.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/debugger/Debugger.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/debugger/DebuggerActivation.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/debugger/DebuggerCallFrame.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/dfg/DFGByteCodeParser.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/dfg/DFGJITCodeGenerator.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/dfg/DFGJITCompiler.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/dfg/DFGNonSpeculativeJIT.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/dfg/DFGOperations.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/dfg/DFGSpeculativeJIT.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/interpreter/CallFrame.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/interpreter/Interpreter.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/interpreter/RegisterFile.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/jit/ExecutableAllocator.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/jit/ExecutableAllocatorFixedVMPool.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/jit/JIT.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/jit/JITCall.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/jit/JITCall32_64.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/jit/JITOpcodes.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/jit/JITOpcodes32_64.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/jit/JITPropertyAccess.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/jit/JITPropertyAccess32_64.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/jit/JITStubs.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/parser/JSParser.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/parser/Lexer.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/parser/Nodes.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/parser/Parser.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/parser/ParserArena.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/profiler/Profile.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/profiler/ProfileGenerator.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/profiler/ProfileNode.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/profiler/Profiler.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/ArgList.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/Arguments.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/ArrayConstructor.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/ArrayPrototype.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/BooleanConstructor.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/BooleanObject.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/BooleanPrototype.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/CallData.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/CommonIdentifiers.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/Completion.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/ConstructData.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/DateConstructor.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/DateConversion.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/DateInstance.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/DatePrototype.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/Error.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/ErrorConstructor.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/ErrorInstance.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/ErrorPrototype.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/ExceptionHelpers.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/Executable.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/FunctionConstructor.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/FunctionPrototype.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/GCActivityCallback.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/GetterSetter.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/Identifier.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/InternalFunction.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/JSActivation.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/JSAPIValueWrapper.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/JSArray.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/JSByteArray.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/JSCell.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/JSFunction.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/JSGlobalData.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/JSGlobalObject.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/JSGlobalObjectFunctions.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/JSLock.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/JSNotAnObject.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/JSObject.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/JSONObject.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/JSPropertyNameIterator.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/JSStaticScopeObject.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/JSString.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/JSValue.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/JSVariableObject.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/JSWrapperObject.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/LiteralParser.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/Lookup.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/NativeErrorConstructor.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/NativeErrorPrototype.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/NumberConstructor.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/NumberObject.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/NumberPrototype.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/ObjectConstructor.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/ObjectPrototype.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/Operations.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/PropertyDescriptor.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/PropertyNameArray.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/PropertySlot.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/RegExp.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/RegExpConstructor.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/RegExpObject.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/RegExpPrototype.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/RopeImpl.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/SamplingCounter.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/SmallStrings.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/StrictEvalActivation.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/StringConstructor.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/StringObject.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/StringPrototype.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/Structure.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/runtime/UString.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/wtf/Assertions.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/wtf/ByteArray.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/wtf/CurrentTime.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/wtf/DecimalNumber.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/wtf/dtoa.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/wtf/FastMalloc.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/wtf/MD5.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/wtf/MetaAllocator.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/wtf/NullPtr.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/wtf/OSRandomSource.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/wtf/PageAllocationAligned.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/wtf/PageBlock.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/wtf/ParallelJobsGeneric.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/wtf/RandomNumber.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/wtf/RefCountedLeakCounter.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/wtf/SHA1.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/wtf/StackBounds.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/wtf/TCSystemAlloc.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/wtf/TypeTraits.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/wtf/dtoa/bignum.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/wtf/dtoa/bignum-dtoa.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/wtf/dtoa/diy-fp.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/wtf/dtoa/double-conversion.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/wtf/dtoa/fast-dtoa.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/wtf/dtoa/fixed-dtoa.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/wtf/dtoa/strtod.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/wtf/ea/OSAllocatorEA.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/wtf/gobject/GOwnPtr.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/wtf/gobject/GRefPtr.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/wtf/text/AtomicString.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/wtf/text/CString.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/wtf/text/StringBuilder.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/wtf/text/StringImpl.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/wtf/text/StringStatics.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/wtf/text/WTFString.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/wtf/unicode/UTF8.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/wtf/unicode/ea/CollatorEA.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/wtf/unicode/ea/UnicodeEA.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/yarr/YarrInterpreter.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/yarr/YarrJIT.cpp',
'../../../../EAWebKitSupportPackages/JavaScriptCore/local/JavaScriptCore/yarr/YarrPattern.cpp',
  ]

cxxflags = [
  '-D_UNICODE',
  '-DBUILDING_EA__=1',
  '-DBUILDING_JavaScriptCore',
  '-DEASTL_CORE_ALLOCATOR_ENABLED=1',
  '-DEASTL_EASTDC_VSNPRINTF=1',
  '-DJS_NO_EXPORT',
  '-DNOMINMAX',
  '-DUNICODE',
  '-DWTF_USE_DIRTYSDK=0',
  '-DWTF_USE_EATEXT=0',
  '-std=c++11',
  '-Og',
  '-Wno-class-memaccess',
  '-Wno-changes-meaning',
  '-Wno-deprecated-declarations',
  '-Wno-c++20-compat',
  '-fpermissive'
]


libn = meson.project_name()

if get_option('buildtype') == 'debug'
  cxxflags += '-D_DEBUG'
  cxxflags += '-DEA_DEBUG'
else
  cxxflags += '-DNDEBUG' 
endif

dependencies = [
]

target = static_library(
  libn,
  sources,
  cpp_args : cxxflags,
  include_directories: includes
)

project_dep = declare_dependency(
  include_directories: headers,
  link_with : target
)

set_variable(meson.project_name() + '_dep', project_dep)

